# backendAI

./: .gitignore  CLAUDE.md  LICENSE  LINUX_SETUP.md  README.md  description.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: sessions.py
backend/app/core/: config.py
backend/app/schemas/: session.py
backend/app/services/: docker_manager.py  session_manager.py  session_store.py
backend/app/static/: index.html
backend/tests/: test_session_store.py
hook/src/: fgpu_hook.c
hook/tests/: bench_alloc.cu  test_alloc.cu  test_driver_alloc.cu  test_launch.cu  test_vmm_alloc.cu
runtime-image/: Dockerfile  entrypoint.sh
runtime-image-pytorch/: Dockerfile  test_compute.py  test_hold.py  test_pytorch.py
scripts/: build_hook.sh  build_image.sh  build_pytorch_image.sh  run_all_tests.sh  run_backend.sh  run_driver_in_container.sh  run_in_container.sh  run_launch_in_container.sh  run_pytorch_in_container.sh  run_test.sh  run_vmm_in_container.sh  smoke_test_api.sh
scripts/eval/: _correlate.py  run_correlation.sh  run_isolation.sh  run_overhead.sh
